--- a/env.example
+++ b/env.example
@@ -1,3 +1,5 @@
+HTTP_HOST=''
+
 DB_HOST=''
 DB_USER=''
 DB_PASS=''
@@ -5,5 +7,7 @@ DB_DATABASE=''
 DB_DRIVER=''
 
 SMTP_HOST=''
+SMTP_PORT=''
 SMTP_USER=''
 SMTP_PASS=''
+SMTP_FROM=''
