--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "duncan3dc/blade": "^3.0",
         "robmorgan/phinx": "^0.10.5",
         "symfony/var-dumper": "^3.4",
-        "cocur/slugify": "^3.1"
+        "cocur/slugify": "^3.1",
+        "swiftmailer/swiftmailer": "^5.4"
     },
     "autoload": {
       "psr-4": {"Acme\\": "src/"}
