--- a/env.example
+++ b/env.example
@@ -1,4 +1,5 @@
 HTTP_HOST=''
+CSRF_SECRET=''
 
 DB_HOST=''
 DB_USER=''
@@ -11,3 +12,6 @@ SMTP_PORT=''
 SMTP_USER=''
 SMTP_PASS=''
 SMTP_FROM=''
+
+VIEWS_DIRECTORY=''
+CACHE_DIRECTORY=''
