--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "robmorgan/phinx": "^0.10.5",
         "symfony/var-dumper": "^3.4",
         "cocur/slugify": "^3.1",
-        "swiftmailer/swiftmailer": "^5.4"
+        "phpunit/phpunit": "^4.8",
+        "swiftmailer/swiftmailer": "^5.4",
+        "kunststube/csrfp": "^0.1.0"
     },
     "autoload": {
       "psr-4": {"Acme\\": "src/"}
